@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.341 2002/08/09 16:50:54 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.342 2002/08/09 17:58:57 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-08-10 21:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/hvm.c
+    ! Fixed hb_vmInc() and hb_vmDec() support of DATE++ and DATE--.
 
 2002-08-09 14:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   * source/rtl/achoice.prg
